[gd_scene load_steps=40 format=2]

[ext_resource path="res://trevor-sheet.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://whip-sheet.png" type="Texture" id=3]
[ext_resource path="res://sounds/whip.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/hurt.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 0, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 64, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 128, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 64, 256, 32, 64 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 0, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 64, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 128, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 0, 512, 36, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 32, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 32, 256, 32, 64 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 0, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 64, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 128, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 32, 64 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 20 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
}, {
"frames": [ SubResource( 24 ) ],
"loop": true,
"name": "crouch",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 27 ) ],
"loop": false,
"name": "crouch_attack",
"speed": 10.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ) ],
"loop": false,
"name": "downstair",
"speed": 8.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 33 ) ],
"loop": false,
"name": "downstair_attack",
"speed": 10.0
}, {
"frames": [ SubResource( 38 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 15 ) ],
"loop": false,
"name": "upstair",
"speed": 8.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 36 ) ],
"loop": false,
"name": "upstair_attack",
"speed": 10.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 13 ), SubResource( 12 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 160, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 160, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 160, 64 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 0, 192, 160, 64 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 0, 256, 160, 64 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 0, 320, 160, 64 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [  ],
"loop": true,
"name": "hidden",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 23 ) ],
"loop": false,
"name": "level1",
"speed": 10.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 30 ) ],
"loop": false,
"name": "level1_crouch",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 16, 32 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 14, 4 )

[sub_resource type="RectangleShape2D" id=37]
extents = Vector2( 24, 6 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "stand"
__meta__ = {
"_edit_lock_": true
}

[node name="WhipSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
animation = "hidden"
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_bottom = 480
__meta__ = {
"_edit_lock_": true
}

[node name="Chat" type="Label" parent="."]
margin_top = -46.0
margin_bottom = -32.0
grow_horizontal = 2
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="ChatTimer" type="Timer" parent="Chat"]
wait_time = 5.0
one_shot = true

[node name="FeetArea" type="Area2D" parent="."]
position = Vector2( 0, 26 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FeetArea"]
shape = SubResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2( -56, -4 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 37 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="WhipSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -12.0
area_mask = 0

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -12.0

[node name="Listener2D" type="Listener2D" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="WhipSprite" to="." method="_on_WhipSprite_animation_finished"]
[connection signal="timeout" from="Chat/ChatTimer" to="." method="_on_ChatTimer_timeout"]
